@@ -99,3 +99,16 @@ evolver.l <- function(graph, niter=5, agebins=max(vcount(graph)/7100, 10),
         as.logical(error), as.numeric(debug),
         PACKAGE="igraph")
 }
+
+evolver.dl <- function(graph, niter=5, agebins=max(vcount(graph)/7100, 10),
+                       sd=FALSE, norm=FALSE, cites=FALSE, expected=FALSE,
+                       error=TRUE, debug=numeric()) {
+  if (!is.igraph(graph)) {
+    stop("Not a graph object!")
+  }
+
+  .Call("R_igraph_evolver_dl", graph, as.numeric(niter), as.numeric(agebins),
+        as.logical(sd), as.logical(norm), as.logical(cites), as.logical(expected),
+        as.logical(error), as.numeric(debug),
+        PACKAGE="igraph")
+}
